Remove Close-button to avoid hidden window

--- a/java/src/jmri/jmrit/vsdecoder/swing/VSDSwingBundle_ca.properties
+++ b/java/src/jmri/jmrit/vsdecoder/swing/VSDSwingBundle_ca.properties
@@ -28,13 +28,11 @@ NewDecoderConfigPaneTitle = Configura un VSDecoder nou
 MgrVolumeToolTip = Ajusta el volum principal per a tots els VSDecoders
 MgrMuteToolTip = Silencia tots els VSDecoders
 MgrAddButtonToolTip = Afegeix un VSDecoder nou
-MgrCloseButtonToolTip = Tanca aquesta finestra i apaga tots els VSDecoders
-MgrQuitMessage = To quit Virtual Sound Decoder Manager click [{0}]
 MgrAddDuplicateMessage = VSDecoder already exists
 
 # VSDControl
 OptionsButtonLabel = Opcions
-OptionButtonPressedMessage = Bot\u00f3 d'opcions encara no implementat
+#OptionButtonPressedMessage = Bot\u00f3 d'opcions encara no implementat
 OptionsDialogTitlePrefix = Opcions
 BlankVSDControlLabel = No hi ha descodificador actiu
 
