--- a/java/src/jmri/jmrit/vsdecoder/swing/VSDSwingBundle_it.properties
+++ b/java/src/jmri/jmrit/vsdecoder/swing/VSDSwingBundle_it.properties
@@ -27,13 +27,11 @@ NewDecoderConfigPaneTitle = Configura Nuovo VSDecoder
 MgrVolumeToolTip = Aggiusta volume principale per tutti i VSDecoders
 MgrMuteToolTip = Silenzia tutti i VSDecoders
 MgrAddButtonToolTip = Aggiungi un nuovo VSDecoder
-MgrCloseButtonToolTip = Chiudi questa finestra e tutti i VSDecoders
-MgrQuitMessage = To quit Virtual Sound Decoder Manager click [{0}]
 MgrAddDuplicateMessage = VSDecoder already exists
 
 # VSDControl
 OptionsButtonLabel = Opzioni
-OptionButtonPressedMessage = Pulsante Opzioni non ancora implementato
+#OptionButtonPressedMessage = Pulsante Opzioni non ancora implementato
 OptionsDialogTitlePrefix = Opzioni
 BlankVSDControlLabel = Nessun decoder attivo
 
