Edit dispatcher properties for style Efficient log string variable style Adjust Length tooltip for unit option set Rename proper whatItems in TransitTableAction

--- a/java/src/jmri/NamedBeanBundle_cs.properties
+++ b/java/src/jmri/NamedBeanBundle_cs.properties
@@ -233,6 +233,7 @@ WarningTitle = Upozorn\u011bn\u00ed
 ErrorTitle = Chyba
 QuestionTitle = Dotaz
 ReminderTitle = Upom\u00ednka
+MessageTitle = Message
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show = Zobrazit
