--- a/java/src/jmri/NamedBeanBundle_de.properties
+++ b/java/src/jmri/NamedBeanBundle_de.properties
@@ -240,6 +240,7 @@ WarningTitle    = Warnung
 ErrorTitle      = Fehler
 QuestionTitle   = Frage
 ReminderTitle   = Erinnerung
+MessageTitle    = Meldung
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show            = Zeige
