--- a/java/src/jmri/NamedBeanBundle_fr.properties
+++ b/java/src/jmri/NamedBeanBundle_fr.properties
@@ -232,6 +232,7 @@ TooltipOpenFile = Select {0} file from disk
 WarningTitle    = Avertissement
 ErrorTitle      = Erreur
 ReminderTitle   = Rappel
+MessageTitle    = Message
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show            = Afficher
