--- a/java/src/jmri/NamedBeanBundle_nl.properties
+++ b/java/src/jmri/NamedBeanBundle_nl.properties
@@ -264,6 +264,7 @@ WarningTitle            = Waarschuwing
 ErrorTitle              = Fout
 QuestionTitle           = Vraag
 ReminderTitle           = Herinnering
+MessageTitle            = Bericht
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show                    = Toon
