--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
@@ -1,18 +1,6 @@
 # DispatcherBundle_ca.properties
 #
 # Catalan properties for the jmri.jmrit.dispatcher GUI elements
-
-# This file is part of JMRI.
-#
-# JMRI is free software; you can redistribute it and/or modify it under
-# the terms of version 2 of the GNU General Public License as published
-# by the Free Software Foundation. See the "COPYING" file for a copy
-# of this license.
-#
-# JMRI is distributed in the hope that it will be useful, but WITHOUT
-# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
-# for more details.
 # Traducci\u00f3 al Catal\u00e0: Joan de Castro Alemany (joan276dca@yahoo.es) 31/08/2016
 
 TitleDispatcher  = Dispatcher
@@ -151,7 +139,6 @@ SaveButton = Desa Informaci\u00f3 del Tren
 SaveButtonHint = Prem per a desar la Informaci\u00f3 del tren (opcional).
 DeleteButton = Elimina...
 DeleteButtonHint = Prem per eliminar el fitxer previ d'Informaci\u00f3 del Tren.
-#None = <cap>
 LoadTrainChoice = Siusplau selecciona un fitxer d'Informaci\u00f3 de Tren per carregar, o Cancel\u00b7la.
 LoadTrainTitle = Carrega Informaci\u00f3 de Tren
 DeleteTrainChoice = Siusplau selecciona un fitxer d'Informaci\u00f3 de Tren per eliminar, o Cancel\u00b7la.
@@ -172,7 +159,7 @@ RunInReverseBoxHint = Marca si la m\u00e0quina ha de circular enrere en aquesta 
 SoundDecoder = La Locomotora t\u00e9 descodificador de so.
 SoundDecoderBoxHint = Marca si el descodificador de la locomotora pot executar acions de so.
 MaxTrainLengthLabel = Longitud m\u00e0xima del Tren:
-MaxTrainLengthHint = Entra la m\u00e0xima longitud del tren  quan s'executi aquesta Circulaci\u00f3.
+MaxTrainLengthHint = Entra la m\u00e0xima longitud ({0}) del tren  quan s'executi aquesta Circulaci\u00f3.
 TerminateWhenDone = Acaba quan s'hagi acabat d'executar
 
 RUNNING = CIRCULANT
@@ -228,12 +215,11 @@ ReverseRadio = Rev
 ReverseRadioHint = Prem per canviar el sentit a Enrere.
 
 ChoiceFrameTitle = Esculla Secci\u00f3 Seg\u00fcent
-ExplainChoice = Siusplau tria la Secci\u00f3 a Seguir 
+ExplainChoice = Siusplau tria la Secci\u00f3 a Seguir {0}.
 WarnCancel = Advert\u00e8ncia! Has Cancel\u00b7lat enlloc de seleccionar una \nSecci\u00f3, l'ordinador escolllir\u00e0 per tu.
 
 NoTransitsMessage = No s'han trobat Circulacions - No es pot obrir el dispatcher. Siusplau afegeix Circulacions i torna-ho a provar.
-InformationTitle = Missatge
-NoAutoRunMessage = Encara no s'ha emplementat la circulaci\u00f3 autom\u00e0tica.
+#NoAutoRunMessage = Encara no s'ha emplementat la circulaci\u00f3 autom\u00e0tica.
 NoResetMessage = La Circulaci\u00f3 seleccionada no est\u00e0 ajustada per a Circulaci\u00f3 \ncont\u00ednua. Mira l'Ajuda de la Taula de Circulacions per a m\u00e9s ajuda.
 NoEntryBlocks = La Circulaci\u00f3 seleccionada no t\u00e9 cap Bloc d'Entrada
 NoAutoTurnoutsMessage = Encara no s'ha implementat el moviment autom\u00e0tic d'Agulles.
@@ -242,16 +228,16 @@ AutoTurnoutsWarn = Sense connectivitat des del panell de l'Editor de Maquetes, l
 Question1 = La Secci\u00f3 \u00e9s LLIURE, per\u00f2 realment est\u00e0 OCUPADA. Vols \nactualitzar i assignar-la?
 Question2 = La secci\u00f3 \u00e9s LLIURE, per\u00f2 els desviaments no estan posicionats \ncorrectament. Vols actualitzar-la i assignar-la?
 ButtonYes = S\u00cd, Actualitza
-ButtonNo = NO, Espera
+#ButtonNo = NO, Espera
 Question3 = Ja existeix un fitxer d'informaci\u00f3 de tren amb el nom "{0}" .\nEl vols canviar o cancel\u00b7lar?
 Question4 = La Secci\u00f3 \u00e9s LLIURE i DESOCUPADA, per\u00f2 aquest Tren Actiu \nencara no ha arribat a l'hora de sortida. Vols \nsaltar-te l'hora de sortida i assignar-la?
 FileYes = S\u00cd, Canvia
-FileNo = No, Cancel\u00b7la
+#FileNo = No, Cancel\u00b7la
 Question5 = La Secci\u00f3 Assignada "{0}" est\u00e0 OCUPADA. La vols alliberar?
 ButtonYesX = S\u00ed, alliberala
-ButtonNoX = No, Cancel\u00b7la
+#ButtonNoX = No, Cancel\u00b7la
 
-MessageTitle = Missatge
+InformationTitle = Missatge
 Message1 = Siusplau completa o cancel\u00b7la "L'Activaci\u00f3 de Nou Tren" abans de parar un Tren Actiu.
 Message2 = Siusplau completa o cancel\u00b7la "L'Activaci\u00f3 de Nou Tren" abans de n\ cancel\u00b7lar el reset autom\u00e0tic d'un Tren Actiu.
 
@@ -291,13 +277,10 @@ Error25 = Nom del fitxer entrat inv\u00e0lid - \n La sol\u00b7licitud per desar 
 Error26 = Sol\u00b7licitud de reset quan s'hagi fet, per\u00f2 la Circulaci\u00f3, "{0}", \nno s'ha ajustat correctament. No es pot crear un nou Tren Actiu. 
 Error27 = No es pot inicialitzar el tren "{0}" en autom\u00e0tic, \ncanviant a mode manual.
 Error28 = No es pot iniciar un Regulador per a correr el tren "{0}" \n en mode autom\u00e0tic, canviant a manual.
-Error30 = Entrada inv\u00e0lida "{0}" en el factor de Velocitat. Siusplau ,torna-ho a provar.
-Error32 = Entrada inv\u00e0lida "{0}" en la m\u00e0xima Longitut de Tren. Siusplau ,torna-ho a provar.
 Error33 = Sol\u00b7licitut de Ciruclaci\u00f3 Autom\u00e0tica, per\u00f2 no s'ha triat panell \nde l'Editor de Maquetes en les opcions. Siusplau ,torna-ho a provar.
 Error34 = S'han trobat "{0}" errors quan s'ha revistat la connectivitat de les Seccions \nen aquest Circulaci\u00f3. Mira registre.
 Error35 = Sol\u00b7licitut de Ciruclaci\u00f3 en autom\u00e0tic, per\u00f2 no s'ha especificat \ndetecci\u00f3 d'ocupaci\u00f3 en les opcions. Siusplau ,torna-ho a provar.
 Error36 = S'han trobat "{0}" errors quan s'han revisat els sensors de sentit a \nla l\u00f2gica de senyals d'aquesta Circualci\u00f3. Mira registre.
-Error38 = Entrada inv\u00e0lida "{0}" en la Velocitat M\u00e0xima. Siusplau ,torna-ho a provar.
 Error39 = L'Assignaci\u00f3 autom\u00e0tica necessita un panell de l'Editor de Maquetes Siusplau \nselecciona'n un en les opcions i,torna-ho a provar.
 Error40 = L'Adre\u00e7a DCC "{0}" est\u00e0 en \u00fas per un \nTren Actiu. Siusplau selecciona una adre\u00e7a sense usar.
 
