--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_nl.properties
@@ -1,98 +1,99 @@
-# DispatcherBundle.properties
+# DispatcherBundle_nl.properties
 #
-# Default properties for the jmri.jmrit.dispatcher GUI elements
+# Dutch properties for the jmri.jmrit.dispatcher GUI elements
+# Translation Egbert Broerse 2017
 
-TitleDispatcher  = Dispatcher
-ActiveTrainTableTitle = Active Trains
-RequestedAllocationsTableTitle = Requested Allocations waiting for Dispatch
-InitiateTrain = New Train
-InitiateTrainButtonHint = Press to bring up a window for setting up a new Train.
-AllocateExtra = Allocate Extra
-AllocateExtraButtonHint = Press to bring up a window allowing allocation of an extra Section to an Active Train.
-TerminateTrain = Terminate Train
-TerminateTrainButtonHint = Press to bring up a window for terminating an Active Train.
-TerminateTrainChoice = Please select an Active Train to Terminate, or Cancel.
-TerminateTrainTitle = Terminate Train
-CancelRestart = Cancel Auto Restart
-CancelRestartButtonHint = Press to bring up a window to cancel automatic restart of an Active Train.
-CancelRestartChoice = Please select an Active Train to cancel automatic restart, or Cancel.
-CancelRestartTitle = Cancel Auto Restart
+TitleDispatcher  = Verkeersleider
+ActiveTrainTableTitle = Actieve Treinen
+RequestedAllocationsTableTitle = Toewijzingsaanvragen in wachtrij
+InitiateTrain = Nieuwe Trein
+InitiateTrainButtonHint = Klik om een Nieuwe Trein aan te maken.
+AllocateExtra = Wijs Extra toe
+AllocateExtraButtonHint = Klik voor Toewijzing van extra Baanvakken aan de Actieve Trein.
+TerminateTrain = Be\u00ebindig Trein
+TerminateTrainButtonHint = Klik voor het Be\u00ebindigen van een Actieve Trein.
+TerminateTrainChoice = Selecteer eerst een Actieve Trein om te Be\u00ebindigen.
+TerminateTrainTitle = Be\u00ebindig Trein
+CancelRestart = Annuleer Auto-herstart
+CancelRestartButtonHint = Klik voor instelling van Auto-herstart van een Actieve Trein.
+CancelRestartChoice = Selecteer eerst een Actieve Trein waarvan je automatische herstart wilt aanpassen.
+CancelRestartTitle = Annuleer Auto-herstart
 
-TransitColumnTitle = Transit
-TrainColumnTitle = Train
-ModeColumnTitle = Mode
-NextSectionColumnTitle = Next Section
-AllocateButtonName = Allocate Next
+TransitColumnTitle = Traject
+TrainColumnTitle = Trein
+ModeColumnTitle = Modus
+NextSectionColumnTitle = Volgend Baanvak
+AllocateButtonName = Wijs volgende toe
 
-ActiveColumnTitle = Active Train
-ExtraTitle = Allocate Extra Section
-ATBoxHint = Select an Active Train to allocate the extra Section to.
-ExtraBoxLabel = Section to Allocate
-ExtraBoxHint = Select a connected Section to allocate.
-CancelExtraHint = Click to cancel without allocating an extra Section.
-AllocateButtonHint = Click to allocate selected Section to Active Train.
-SectionColumnTitle = Requested Section
-AllocatedSectionColumnTitle = Allocated Section
-StatusColumnTitle = Section Status
-TrainStatusColumnTitle = Train Status
-TrainModeColumnTitle = Mode
-OccupancyColumnTitle = Occupancy
-UseStatusColumnTitle = Use Status
-TrainTypeColumnTitle =  Train Type
-TrainLengthColumnTitle = Length
-SectionLengthColumnTitle = Length
-AllocateButton = Allocate
-AllocatedSectionsTitle = Allocated Sections
-AutoReleaseBoxLabel = Auto Release
-AutoReleaseBoxHint = Select to automatically release Allocated Sections that show exited.
-ReleaseButton = Release
-NotEntered = Not Entered
-Entered = Entered
-Exited = Exited
+ActiveColumnTitle = Actieve Trein
+ExtraTitle = Wijs Extra Baanvak toe
+ATBoxHint = Selecteer een Actieve Trein waaraan extra Baanvak wordt toegewezen.
+ExtraBoxLabel = Toe te wijzen Baanvak
+ExtraBoxHint = Kies een aansluitend Baanvak om toe te wijzen.
+CancelExtraHint = Annuleren zonder toewijzing van extra Baanvak.
+AllocateButtonHint = Wijs geselecteerd Baanvak toe aan Actieve Trein.
+SectionColumnTitle = Aangevraagd Baanvak
+AllocatedSectionColumnTitle = Toegewezen Baanvak
+StatusColumnTitle = Baanvak-status
+TrainStatusColumnTitle = Trein-status
+TrainModeColumnTitle = Modus
+OccupancyColumnTitle = Bezetstatus
+UseStatusColumnTitle = Gebruik-status
+TrainTypeColumnTitle =  Trein-type
+TrainLengthColumnTitle = Lengte
+SectionLengthColumnTitle = Lengte
+AllocateButton = Wijs Toe
+AllocatedSectionsTitle = Toegewezen Baanvakken
+AutoReleaseBoxLabel = Auto-vrijgeven
+AutoReleaseBoxHint = Selecteer om automatisch Toegewezen Baanvakken na uitrijden vrij te geven.
+ReleaseButton = Geef Vrij
+NotEntered = Niet Ingereden
+Entered = Ingereden
+Exited = Uitgereden
 
-AutoDispatchItem = Auto Allocate
-OptionWindowItem = Dispatcher Options
-ReminderSaveOptions = <html>Remember to save your Dispatcher Options settings to disk.<br>(choose Save Options from the Options menu)</html>
-AutoTurnoutsItem = Auto Set Turnouts
-SaveOptionsItem = Save Options
-UseConnectivity = Use connectivity from Layout Editor panel:
-UseConnectivityHint = Select to use the connectivity from the selected Layout Editor panel.
-SignalType1 = Signal Heads/SSL
-SignalType2 = Signal Masts/SML
-SignalTypeHint = Select the type of signaling used on the panel and which Dispatcher will follow.
+AutoDispatchItem = Auto-toewijzen
+OptionWindowItem = Verkeersleider Opties
+ReminderSaveOptions = <html>Remember to save your Dispatcher Opties settings to disk.<br>(choose Save Opties from the Opties menu)</html>
+AutoTurnoutsItem = Auto-stel Wissels
+SaveOptionsItem = Sla Opties op
+UseConnectivity = Gebruik verbindingen uit Spoorplan Paneel:
+UseConnectivityHint = Selecteer om de blokverbindingen uit het geselecteerde Spoorplan Paneel te gebruiken.
+SignalType1 = Seinschilden/SSL
+SignalType2 = Seinmasten/SML
+SignalTypeHint = Selecteer welk type signalering het Paneel gebruikt which Verkeersleider will follow.
 LayoutEditorHint = Select Layout Editor panel with best connectivity, if there are more than one.
-TrainsFromRoster = Trains from Roster
-TrainsFromRosterHint = Select for Trains to be selected from the JMRI Roster.
-TrainsFromTrains = Trains from Operations
-TrainsFromTrainsHint = Select for Trains to be selected from JMRI trains in Operations.
-TrainsFromUser = Trains from User Entry
+TrainsFromRoster = Treinen from Roster
+TrainsFromRosterHint = Select for Treinen to be selected from the JMRI Rster.
+TrainsFromTrains = Treinen from Operations
+TrainsFromTrainsHint = Select for Treinen to be selected from JMRI trains in Operations.
+TrainsFromUser = Treinen from User Entry
 TrainsFromUserHint = Select for Trains information to be entered by the user at creation time.
 DetectionBox = Layout has block detection hardware.
-DetectionBoxHint = Select if layout has hardware block occupancy detection for all Blocks in Sections.
-AutoAllocateBox = Automatically allocate Sections to Active Trains.
-AutoAllocateBoxHint = Select if computer is to automatically allocate requested Sections. Uncheck for manual allocation.
-AutoTurnoutsBox = Automatically set turnouts when a Section is allocated.
-AutoTurnoutsBoxHint = Select if computer is to automatically set turnouts when a Section is allocated. Uncheck for manual setting.
+DetectionBoxHint = Check if layout has hardware block occupancy detection for all Blokken in Baanvakken.
+AutoAllocateBox = Automatically allocate Baanvakken to Actieve Treinen.
+AutoAllocateBoxHint = Check if computer is to automatically allocate requested Baanvakken. Uncheck for manual allocation.
+AutoTurnoutsBox = Automatically set turnouts when a Baanvak is toegewezen.
+AutoTurnoutsBoxHint = Check if computer is to automatically set turnouts when a Baanvak is toegewezen. Uncheck for manual setting.
 CancelButtonHint2 = Click to cancel without changing any options.
 ApplyButtonHint = Click to apply above options and close this window.
 ShortNameBox = Use short Active Train names.
 ShortNameBoxHint = <html>Select to use only the Train name as the Active Train name in tables and selection boxes.<br>\
   If unchecked, will also show Train's current Transit User Name.</html>
-NameInBlockBox = Place Train name in starting Block
-NameInBlockBoxHint = Select to automatically place the name of new Trains in their starting Block value.
-RosterInBlockBox = Place Roster Entry in starting Block
-RosterInBlockBoxHint = Select to automatically place the Roster Entry of new Trains in their starting Block value.
-ExtraColorForAllocatedBox = Use alternate color for allocated Blocks
-ExtraColorForAllocatedBoxHint = Select to use alternate color for unoccupied Blocks in allocated Sections.
-NameInAllocatedBlockBox = Place Train name in allocated Blocks
-NameInAllocatedBlockBoxHint = Select to automatically place the Train name in Blocks of allocated Sections.
-OpenDispatcherWithPanelBox = Open Dispatcher with Panel
-OpenDispatcherWithPanelBoxHint = Select to automatically open the Dispatcher window when the Panel is loaded (Panel file will need to be saved)
-Units = Units:
-ScaleFeet = Scale Feet
-ScaleFeetHint = Select to use scale feet for Section and Train length.
-ScaleMeters = Scale Meters
-ScaleMetersHint = Select to use scale meters for Section and Train length.
+NameInBlockBox = Place Trein name in starting Blok
+NameInBlockBoxHint = Check to automatically place the name of nieuwe Treinen in their starting Blok value.
+RosterInBlockBox = Place Roster Entry in starting Blok
+RosterInBlockBoxHint = Check to automatically place the Roster Entry of nieuwe Treinen in their starting Blok value.
+ExtraColorForAllocatedBox = Use alternate color for toegewezen Blokken
+ExtraColorForAllocatedBoxHint = Check to use alternate color for unoccupied Blokken in toegewezen Baanvakken.
+NameInAllocatedBlockBox = Place Trein name in toegewezen Blokken
+NameInAllocatedBlockBoxHint = Check to automatically place the Trein name in Blokken of toegewezen Baanvakken.
+OpenDispatcherWithPanelBox = Open Verkeersleider met Regelpaneel
+OpenDispatcherWithPanelBoxHint = Check to automatically open the Verkeersleider window when the Panel is loaded (Panel file will need to be saved)
+Units = Eenheid:
+ScaleFeet = ft (schaal)
+ScaleFeetHint = Selecteer om de lengte van Baanvakken en Treinen in voet (verschaald) in te vullen.
+ScaleMeters = m (schaal)
+ScaleMetersHint = Selecteer om de lengte van Baanvakken en Treinen in meters (verschaald) in te vullen.
 
 AddTrainTitle = Activate New Train
 TransitBoxLabel = Transit
@@ -165,7 +166,7 @@ RunInReverseBoxHint = Select if locomotive is to run in reverse through this Tra
 SoundDecoder = Loco has sound decoder
 SoundDecoderBoxHint = Select if locomotive decoder can perform sound actions.
 MaxTrainLengthLabel = Maximum Train Length:
-MaxTrainLengthHint = Enter the maximum length ({0}) of this Train while running with this Transit.
+MaxTrainLengthHint = Vul de maximumlengte in ({0}) voor deze Trein voor gebruik op dit Traject.
 TerminateWhenDone = Terminate when Done
 
 RUNNING = RUNNING
@@ -192,8 +193,8 @@ THROUGH_PASSENGER = THROUGH_PASSENGER
 THROUGH_FREIGHT = THROUGH_FREIGHT
 EXPRESS_PASSENGER = EXPRESS_PASSENGER
 EXPRESS_FREIGHT = EXPRESS_FREIGHT
-MOW = MOW
 
+MOW = MOW
 RAMP_NONE = RAMP_NONE
 RAMP_FAST = RAMP_FAST
 RAMP_MEDIUM = RAMP_MEDIUM
@@ -220,8 +221,8 @@ ForwardRadioHint = Press to change direction to Forward.
 ReverseRadio = Rev
 ReverseRadioHint = Press to change direction to Reverse.
 
-ChoiceFrameTitle = Choose Next Section
-ExplainChoice = Please choose the Section to follow {0}.
+ChoiceFrameTitle = Kies volgende Baanvak
+ExplainChoice = Kies het Baanvak dat volgt op "{0}".
 WarnCancel = Warning! You cancelled without selecting a Section,\nso JMRI will try to make a selection.
 
 NoTransitsMessage = Cannot open Dispatcher - no Transits found. Please create Transits and try again.
