--- a/java/src/apps/ActionListBundle_nl.properties
+++ b/java/src/apps/ActionListBundle_nl.properties
@@ -104,7 +104,7 @@ apps.CheckForUpdateAction = Controleer op Updates
 jmri.jmrit.roster.swing.RosterFrameAction = Open Loclijst
 jmri.jmrit.roster.RecreateRosterAction = Bouw Loclijst opnieuw op
 
-jmri.jmrit.dispatcher.DispatcherAction = Open Dienstleider
+jmri.jmrit.dispatcher.DispatcherAction = Open Verkeersleider
 
 # Preferences
 apps.gui3.TabbedPreferencesAction = Voorkeuren...
