--- a/java/src/jmri/NamedBeanBundle_ca.properties
+++ b/java/src/jmri/NamedBeanBundle_ca.properties
@@ -199,6 +199,7 @@ ButtonStop = Stop
 WarningTitle = Advert\u00e8ncia
 ErrorTitle = Error
 ReminderTitle = Recorda
+MessageTitle = Missatge
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show = Mostra
