--- a/java/src/jmri/NamedBeanBundle_da.properties
+++ b/java/src/jmri/NamedBeanBundle_da.properties
@@ -264,6 +264,7 @@ WarningTitle    = Advarsel
 ErrorTitle      = Fejl
 QuestionTitle   = Sp\u00f8rgsm\u00e5l
 ReminderTitle   = Husker
+MessageTitle    = Message
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show            = Vis
