--- a/java/src/jmri/NamedBeanBundle_it.properties
+++ b/java/src/jmri/NamedBeanBundle_it.properties
@@ -204,6 +204,7 @@ ButtonStop      = Stop
 WarningTitle    = Attenzione
 ErrorTitle      = Errore
 ReminderTitle   = Promemoria
+MessageTitle    = Messaggio
 
 # Beantable (SML edit) and jmrix (cmri) items
 Show            = Mostra
