--- a/java/src/jmri/NamedBeanBundle_ja_JP.properties
+++ b/java/src/jmri/NamedBeanBundle_ja_JP.properties
@@ -106,3 +106,4 @@ ButtonStop      = \u505c\u6b62
 ErrorTitle      = \u30a8\u30e9\u30fc
 WarningTitle    = \u8b66\u544a
 ReminderTitle   = \u899a\u3048\u66f8\u304d
+MessageTitle    = \u30e1\u30c3\u30bb\u30fc\u30b8
