Dispatcher Dutch translation

--- a/java/src/jmri/jmrit/Bundle_nl.properties
+++ b/java/src/jmri/jmrit/Bundle_nl.properties
@@ -28,7 +28,7 @@ MenuItemBlockTable = Blokken
 MenuItemSectionTable = Baanvakken
 MenuItemTransitTable = Transits
 MenuItemSensorGroup = Terugmeldergroepen...
-MenuItemDispatcher = Dienstleider...
+MenuItemDispatcher = Verkeersleider...
 MenuItemAudioTable = Audio
 MenuItemIdTagTable = ID Tags
 MenuItemSignalMastTable = Seinmasten
