--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_da.properties
@@ -11,11 +11,11 @@ AllocateExtra = Allocate Extra
 AllocateExtraButtonHint = Press to bring up a window allowing allocation of an extra Section to an Active Train.
 TerminateTrain = Terminate Train
 TerminateTrainButtonHint = Press to bring up a window for terminating an Active Train.
-TerminateTrainChoice = Please select an Active Train to Terminate, or Cancel.
+TerminateTrainChoice = Please select an Active Train to Terminate.
 TerminateTrainTitle = Terminate Train
 CancelRestart = Cancel Auto Restart
 CancelRestartButtonHint = Press to bring up a window to cancel automatic restart of an Active Train.
-CancelRestartChoice = Please select an Active Train to cancel automatic restart, or Cancel.
+CancelRestartChoice = Please select an Active Train to cancel automatic restart.
 CancelRestartTitle = Cancel Auto Restart
 
 TransitColumnTitle = Transit
@@ -87,7 +87,8 @@ ExtraColorForAllocatedBoxHint = Select to use alternate color for unoccupied Blo
 NameInAllocatedBlockBox = Place Train name in allocated Blocks
 NameInAllocatedBlockBoxHint = Select to automatically place the Train name in Blocks of allocated Sections.
 OpenDispatcherWithPanelBox = Open Dispatcher with Panel
-OpenDispatcherWithPanelBoxHint = Select to automatically open the Dispatcher window when the Panel is loaded (Panel file will need to be saved)
+OpenDispatcherWithPanelBoxHint = <html>Select to automatically open the Dispatcher window when the Panel is loaded<br>\
+  (Panel file will need to be saved)</html>
 Units = Units:
 ScaleFeet = Scale Feet
 ScaleFeetHint = Select to use scale feet for Section and Train length.
@@ -100,7 +101,7 @@ TransitBoxHint = Select a Transit for the new Active Train.
 TrainBoxLabel = Train
 TrainBoxHint = From the list, select a Train to activate.
 TrainFieldLabel = Train Name
-TrainFieldHint = Enter a Train name (short 5 - 10 letter description).
+TrainFieldHint = Enter a Train name (short 5 - 15 letter description).
 DccAddressFieldLabel = DCC Address
 DccAddressFieldHint = Enter the DCC Address of the Train; needed for Automatic Running.
 TrainInTransit = Train in selected Transit
@@ -112,7 +113,8 @@ DestinationBlockBoxHint = Select the Block where the Train will be located when 
 AutoRun = Run Train Automatically
 AutoRunBoxHint = Select to request this Train be run automatically by JMRI Dispatcher.
 AllocateAllTheWay = Allocate Train as far as possible
-AllocateAllTheWayBoxHint = Select for Train to be allocated from start to end as far as possible. Leave unchecked to allocate no more than three Sections ahead.
+AllocateAllTheWayBoxHint = <html>Select for Train to be allocated from start to end as far as possible.<br>\
+  Leave unchecked to allocate no more than three Sections ahead.</html>
 LoadAtStartup = Load Train at Startup
 LoadAtStartupBoxHint = Select for Train to be loaded when Dispatcher starts. Press Create/Update Train to take effect.
 ResetWhenDoneBoxHint = Select for continuous running, to automatically reset for another run through the selected Transit (in same direction).
@@ -133,7 +135,7 @@ RestartTimedHint = Enter the amount of time in minutes that Dispatcher will wait
 DelayRestart = Add Delay
 DelayedReStartHint = Add a delay between the circuits, when running continuously
 DepartureTime = Departure Time:
-DepartureTimeHrHint = Enter fast clock departure time hours (24-hour clock) (00-23).
+DepartureTimeHrHint = Enter fast clock departure time hours (24-hour clock: 00-23).
 DepartureTimeMinHint = Enter fast clock departure time minutes (00-59).
 AddNewTrainButton = Add New Train
 AddNewTrainButtonHint = Click to activate a new Train using the entered information.
@@ -227,18 +229,17 @@ WarnCancel = Warning! You cancelled without selecting a Section,\nso JMRI will t
 NoTransitsMessage = Cannot open Dispatcher - no Transits found. Please create Transits and try again.
 NoResetMessage = Sorry, the selected Transit is not set up for continuous running.\nSee Transit Table help for more information.
 NoEntryBlocks = The Selected Transit doesn't have any Entry Blocks
-NoAutoTurnoutsMessage = Sorry, automatic setting of turnouts has not been implemented yet.
 AutoTurnoutsWarn = Without connectivity from a Layout Editor panel, all turnouts\nmay not be set correctly. Please check when allocating.
 
 Question1 = Section is FREE, but is OCCUPIED.\nDo you want to override the occupancy and allocate the Section?
 Question2 = Section is FREE, but Section Turnouts are not set correctly.\nDo you want to override and allocate the Section anyway?
-ButtonYes = Yes, Override
+ButtonOverride = Override
 #ButtonNo = (plain No) is in NamedBeanBundle
-Question3 = A Train Info file with the name "{0}" already exists.\nDo you want to replace that file or Cancel?
-FileYes = Yes, Replace
-Question4 = Section is FREE and UNOCCUPIED, but this Active Train \nhas not yet reached its start time. Do you want \nto override the start time and allocate it?
+Question3 = A Train Info file with the name "{0}" already exists.\nDo you want to replace that file?
+ButtonReplace = Replace
+Question4 = Section is FREE and UNOCCUPIED, but this Active Train \nhas not yet reached its start time.\nDo you want to override the start time and allocate it?
 Question5 = The Allocated Section "{0}" is OCCUPIED. Do you want to release it? This could cause a collision.
-ButtonYesX = Yes, Release
+ButtonRelease = Release
 
 Message1 = Complete or cancel Activate New Train pane before Terminating an ActiveTrain.
 Message2 = Complete or cancel Activate New Train before\n cancelling automatic restart of an ActiveTrain.
@@ -254,17 +255,17 @@ ScaleBoxHint = Select the scale of your model railroad.
 
 Error1 = The name "{0}" does not match an existing Transit.\nPlease correct or create as required, and try again.
 Error2 = Transit "{0}" is in use with another Active Train.\nPlease wait until it''s IDLE, or use a duplicate.
-Error3 = TrainID is missing from request to create an Active Train.\nPlease add trainID and try again.
+Error3 = Train ID is missing from request to create an Active Train.\nPlease add train ID and try again.
 Error4 = The name "{0}" does not match an allowed starting Block.\nPlease correct and try again.
-Error5 = Requested starting Block "{0}" is a Section allocated to a\ndifferent Active Train. Please correct and try again.
-Error6 = No Train detected in requested starting Block "{0}".\nPlease correct and try again.
+Error5 = Requested Starting Block "{0}" is a Section allocated to a\ndifferent Active Train. Please correct and try again.
+Error6 = No Train detected in requested Starting Block "{0}".\nPlease correct and try again.
 Error7 = The name "{0}" does not match an existing Block in \nthe requested Transit. Please correct, and try again.
 Error8 = End Block is in requested Transit, but no Section\nsequence number was provided. Please correct, and try again.
-Error9 = Invalid end Block Section sequence number "{0}".\nPlease correct and try again.
+Error9 = Invalid End Block Section sequence number "{0}".\nPlease correct and try again.
 Error10 = Automatic running requested, but no DCC address was\nprovided. Please provide DCC address and try again.
 Error11 = Creating new Active Train failed for undetermined reason,\nTransit "{0}", Train "{1}". Please check and try again.
 Error12 = Starting Block is present and connected, but no Section\nsequence order number was provided. Please correct, and try again.
-Error13 = Invalid start Block Section sequence order number "{0}".\nPlease correct and try again.
+Error13 = Invalid Starting Block Section sequence order number "{0}".\nPlease correct and try again.
 Error14 = No Trains are available.\nCannot create a new Active Train.
 Error15 = No Transits are available.\nCannot create a new Active Train.
 Error16 = No Active Train specified in request for allocation\nof a Section. Cannot process the request.
@@ -276,23 +277,23 @@ Error21 = Illegal Train source identifier provided. Please correct the Train sou
 Error22 = No Train name was entered.\nCannot create a new Active Train.
 Error24 = Entered Train name "{0}" is already in use by an\nActive Train. Please enter a different Train name.
 Error25 = Illegal file name entry.\nRequest to save Train Info was skipped.
-Error26 = Request for Reset when Done, but Transit, "{0}"\nis not set up correctly. Cannot create a new Active Train. 
+Error26 = Request for Reset when Done, but Transit "{0}"\nis not set up correctly. Cannot create new Active Train. 
 Error27 = Could not initialize automatic running of Train "{0}".\nChanging to Manual running.
 Error28 = Could not start a Throttle to run Train "{0}" \nautomatically. Changing to Manual running.
 Error33 = Automatic running requested, but no Layout Editor panel \nwas specified in the Dispatcher Options. Please set try again.
-Error34 = Found "{0}" errors when checking connectivity of Sections \nin this Transit. Check Console log for details.
+Error34 = Found {0} errors when checking connectivity of Sections \nin this Transit. Check Console log for details.
 Error35 = Automatic running requested, but occupancy detection \nwas not specified in the Dispatcher Options. Please set and try again.
-Error36 = Found "{0}" errors when checking/setting direction Sensors in \nsignal logic for this Transit. Check Console log for details.
+Error36 = Found {0} errors when checking/setting direction Sensors in \nsignal logic for this Transit. Check Console log for details.
 Error39 = Auto Allocate requires a Layout Editor panel but no panel \nwas specified in the Dispatcher Options.\nPlease select a Layout Editor panel in Dispatcher Options and try again.
-Error40 = Requested DCC address "{0}" is already in use by an\nActive Train. Please select another address.
+Error40 = Requested DCC Address "{0}" is already in use by an\nActive Train. Please set a different address.
 
 SupportVSDecoder = Support Virtual Sound Decoder Positioning
 SupportVSDecoderBoxHint = Select this option to use Dispatcher to help position train sounds from Virtual Sound Decoder
 
 trustKnownTurnouts = Trust Known State of Turnouts
-trustKnownTurnoutsHint = Trust the current known state of turnouts, and do not repeat command again.
+trustKnownTurnoutsHint = Trust the current known state of turnouts, and do not repeat command.
 ms = milliseconds
 minThrottleInterval = Minimum Throttle Interval
-minThrottleIntervalHint = Minimum interval (in milliseconds) between throttle commands; choose a value from 20 to 1,000 ms
+minThrottleIntervalHint = Minimum interval (in milliseconds) between throttle commands. Choose a value from 20 to 1,000 ms
 fullRampTime = Time to Fully Ramp
-fullRampTimeHint = Time (in ms) for RAMP_FAST loco to change from 0% to 100%. Choose a value from 1,000 ms to 20,000 ms. 
+fullRampTimeHint = Time (in ms) for {0} loco to change from 0% to 100%. Choose a value from 1,000 ms to 20,000 ms.
