--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_it.properties
@@ -216,23 +216,20 @@ ExplainChoice = Si prega di scegliere la la Sezione a seguire {0}.
 WarnCancel = Attenzione! Hai annullato invece di selezionare una sezione \n, pertanto il computer seleziona per voi.
 
 NoTransitsMessage = Non trovati Transiti - non \u00e8 possibile aprire Dispatcher. Si prega di aggiungere Transiti e riprovare.
-InformationTitle = Messaggio
-#NoAutoRunMessage = Ci dispiace, l'esecuzione automatica dei treni non \u00e8 stata ancora implementata.
 NoResetMessage = Spiacenti, il Transito scelto non \u00e8 configurato per un funzionamento continuo. \n Per maggiori informazioni vedere la finestra aiuto nella tabella dei Transiti.
 NoEntryBlocks = Il Transito selezionato non ha nessun Blocco d'ingresso
-NoAutoTurnoutsMessage = Spiacente ma l'impostazione automatica degli scambi non \u00e8 stata ancora realizzata.
 AutoTurnoutsWarn = Senza connessione ad un pannello di Layout Editor, tutti gli scambi \n potrebbero non essere impostati correttamente. Si prega di Spuntare al momento dell'assegnazione.
 
 Question1 = la Sezione risulta LIBERA, ma \u00e8 OCCUPATA.\n Vuoi ignorare l'occupazione e allocarla?
 Question2 = la Sezione risulta LIBERA, ma gli scambi di sezione non sono impostati\n correttamente. Vuoi ignorare e assegnare lo stesso?
-ButtonYes = Si, Sostituisci
+ButtonOverride = Sostituisci
 #ButtonNo = No, Attendi
 Question3 = Un file Info treno con il nome "{0}" esiste gi\u00e0. \n Vuoi sostituire il file, o Annulla?
 Question4 = Sezione \u00e8 LIBERA e NON OCCUPATA, ma questo treno attivo \n non ha ancora raggiunto il suo orario di partenza. \n Vuoi ignorare l'orario di partenza ed assegnarlo?
-FileYes = Si, Rimpiazza
+ButtonReplace = Rimpiazza
 #FileNo = No, Annulla
 Question5 = La sezione allocata "{0}" \u00e8 OCCUPATA. Vuoi davvero liberarla?
-ButtonYesX = Si, Libera
+ButtonRelease = Libera
 #ButtonNoX = No, Annulla liberazione
 
 Message1 = Si prega di completare o Annullare "Attivazione nuovo treno" prima di terminare un ActiveTrain.
