--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ja_JP.properties
@@ -120,18 +120,15 @@ ExplainChoice = Please chose the Section to follow {0}.
 WarnCancel = Warning! You cancelled instead of selecting a\nSection, so computer will select for you.
 
 NoTransitsMessage = No Transits found - cannot open Dispatcher. Please add Transits and try again.
-InformationTitle = \u30e1\u30c3\u30bb\u30fc\u30b8
-#NoAutoRunMessage = Sorry, automatic running of trains has not been implemented yet.
 NoResetMessage = Sorry, the selected Transit is not set up for continuous \nrunning. See Transit Table window help for more information.
-NoAutoTurnoutsMessage = Sorry, automatic setting of turnouts has not been implemented yet.
 AutoTurnoutsWarn = Without connectivity from a layout editor panel, all turnouts\nmay not be set correctly. Please check when allocating.
 
 Question1 = \u30bb\u30af\u30b7\u30e7\u30f3\u306fFREE, but is OCCUPIED. Do you \nwant to override the occupancy and allocate it?
 Question2 = Section is FREE, but section turnouts are not set \ncorrectly. Do you want to override and allocate it anyway?
-ButtonYes = Yes, Override
+ButtonOverride = Override
 #ButtonNo = No, Wait
 Question3 = A Train Info file with the name "{0}" already exists.\nDo you want to replace that file or cancel?
-FileYes = Yes, Replace
+ButtonReplace = Replace
 #FileNo = No, Cancel
 
 Message1 = Please complete or cancel Activate New Train before Terminating an ActiveTrain.
