--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_ca.properties
@@ -186,8 +186,8 @@ THROUGH_PASSENGER = DIRECTE_PASSATGERS
 THROUGH_FREIGHT = DIRECTE_MERCADERIES
 EXPRESS_PASSENGER = EXPR\u00c9S_PASSATGERS
 EXPRESS_FREIGHT = EXPRESS_MERCADERIES
-
 MOW = MOW
+
 RAMP_NONE = SENSE ACCELERACI\u00d3
 RAMP_FAST = ACCELERACI\u00d3_R\u00c0PIDA
 RAMP_MEDIUM = ACCELERACI\u00d3_MITJANA
@@ -219,22 +219,20 @@ ExplainChoice = Siusplau tria la Secci\u00f3 a Seguir {0}.
 WarnCancel = Advert\u00e8ncia! Has Cancel\u00b7lat enlloc de seleccionar una \nSecci\u00f3, l'ordinador escolllir\u00e0 per tu.
 
 NoTransitsMessage = No s'han trobat Circulacions - No es pot obrir el dispatcher. Siusplau afegeix Circulacions i torna-ho a provar.
-#NoAutoRunMessage = Encara no s'ha emplementat la circulaci\u00f3 autom\u00e0tica.
 NoResetMessage = La Circulaci\u00f3 seleccionada no est\u00e0 ajustada per a Circulaci\u00f3 \ncont\u00ednua. Mira l'Ajuda de la Taula de Circulacions per a m\u00e9s ajuda.
 NoEntryBlocks = La Circulaci\u00f3 seleccionada no t\u00e9 cap Bloc d'Entrada
-NoAutoTurnoutsMessage = Encara no s'ha implementat el moviment autom\u00e0tic d'Agulles.
 AutoTurnoutsWarn = Sense connectivitat des del panell de l'Editor de Maquetes, les agulles\npoden no estar ben posicionades. Siusplau revisa quan assignis.
 
 Question1 = La Secci\u00f3 \u00e9s LLIURE, per\u00f2 realment est\u00e0 OCUPADA. Vols \nactualitzar i assignar-la?
 Question2 = La secci\u00f3 \u00e9s LLIURE, per\u00f2 els desviaments no estan posicionats \ncorrectament. Vols actualitzar-la i assignar-la?
-ButtonYes = S\u00cd, Actualitza
+ButtonOverride = Actualitza
 #ButtonNo = NO, Espera
 Question3 = Ja existeix un fitxer d'informaci\u00f3 de tren amb el nom "{0}" .\nEl vols canviar o cancel\u00b7lar?
 Question4 = La Secci\u00f3 \u00e9s LLIURE i DESOCUPADA, per\u00f2 aquest Tren Actiu \nencara no ha arribat a l'hora de sortida. Vols \nsaltar-te l'hora de sortida i assignar-la?
-FileYes = S\u00cd, Canvia
+ButtonReplace = Canvia
 #FileNo = No, Cancel\u00b7la
 Question5 = La Secci\u00f3 Assignada "{0}" est\u00e0 OCUPADA. La vols alliberar?
-ButtonYesX = S\u00ed, alliberala
+ButtonRelease = Lliberala
 #ButtonNoX = No, Cancel\u00b7la
 
 InformationTitle = Missatge
@@ -293,4 +291,4 @@ ms = ms
 minThrottleInterval = Interval m\u00ednim de regulador
 minThrottleIntervalHint = Interval m\u00ednim (en ms) entre ordres de reguladors, entre 20ms i 1000ms
 fullRampTime = Temps per a taxa m\u00e0xima
-fullRampTimeHint = Temps (en ms) per taxa de canvi r\u00e0pida de locomotora per canviar de 0% a 100%, entre 1s i 20s. 
+fullRampTimeHint = Temps (en ms) per taxa de {0} de locomotora per canviar de 0% a 100%, entre 1s i 20s. 
