--- a/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
+++ b/java/src/jmri/jmrit/dispatcher/DispatcherBundle_fr.properties
@@ -185,8 +185,8 @@ THROUGH_PASSENGER = PASSAGER_TRANSIT
 THROUGH_FREIGHT = FRET_TRANSIT
 EXPRESS_PASSENGER = PASSAGER_EXPRESS
 EXPRESS_FREIGHT = FRET_EXPRESS
-
 MOW = MOW 
+
 RAMP_NONE = AUCUNE_RAMPE
 RAMP_FAST = RAMPE_RAPIDE
 RAMP_MEDIUM = RAMPE_M\u00c9DIUM
@@ -216,23 +216,20 @@ ExplainChoice = Choississez la Section \u00e0 suivre {0} .
 WarnCancel = Attention! Vous avez annul\u00e9 au lieu de s\u00e9lectionner une\nSection, aussi l'ordinateur choisira pour vous.
 
 NoTransitsMessage = Pas trouv\u00e9s de Transits - Ne peut pas ouvrir le Dispatcheur. S'il vous pla\u00eet ajoutez des Transits et r\u00e9essayez.
-InformationTitle = Message
-#NoAutoRunMessage = D\u00e9sol\u00e9, le fonctionnement automatique des trains n'a pas encore \u00e9t\u00e9 mis en \u0153uvre.
 NoResetMessage = D\u00e9sol\u00e9, le Transit s\u00e9lectionn\u00e9 n'est pas configur\u00e9 pour continuer\nla circulation. Voir la fen\u00eatre Tableau Transit  pour plus d'informations.
 NoEntryBlocks = Le Transit s\u00e9lectionn\u00e9 n'a pas de Canton Entr\u00e9e
-NoAutoTurnoutsMessage = D\u00e9sol\u00e9, le r\u00e9glage automatique des aiguillages n'a pas encore \u00e9t\u00e9 mis en oeuvre.
 AutoTurnoutsWarn = sans connexion \u00e0 partir d'un panneau de l'\u00e9diteur de r\u00e9seau, tous les aiguillages\n ne peuvent pas \u00eatre r\u00e9gl\u00e9s correctement. S'il vous pla\u00eet v\u00e9rifier lors de l'attribution.
 
 Question1 = Section 1 est LIBRE, mais OCCUP\u00c9E. Voulez-vous\nremplacer l'occupation et l'affecter?
 Question2 = Section 2 est LIBRE, mais la section aiguillages n'est pas d\u00e9finie\ncorrectement. Voulez-vous la remplacer et l'allouer de toute fa\u00e7on?
-ButtonYes = Oui, remplacez
+ButtonOverride = Remplacez
 #ButtonNo = Non, attendez
 Question3 = Un Fichier Info de train avec le nom "{0}" existe d\u00e9j\u00e0\nVoulez-vous remplacer ce fichier ou annuler?
 Question4 = Section est LIBRE et INOCCUP\u00c9E, mais ce train Actif\nn'a pas encore atteint son heure de d\u00e9part. Voulez-vous\nremplacer  l'heure de d\u00e9part et l'affecter?
-FileYes = Oui, remplacez
+ButtonReplace = Remplacez
 #FileNo = Non, Annuler
 Question5 = La Section Allou\u00e9 "{0}" est occup\u00e9e. Voulez-vous vraiment la lib\u00e9rer?
-ButtonYesX = Oui, Liberer
+ButtonRelease = Liberer
 #ButtonNoX = Non, Annuler Lib\u00e9ration
 
 Message1 = Veuillez terminer ou annuler un nouveau Train Actif avant de Terminer un Train Actif.
@@ -240,7 +237,7 @@ Message2 = Veuillez terminer ou annuler un nouveau Train Actif avant\nd'annuler 
 
 TrainWarn = Le nom de train du fichier - "{0}" n'est pas disponible pour la s\u00e9lection.
 TransitWarn = Le nom transit du fichier - "{0}" n'est pas disponible pour la s\u00e9lection.
-FastClockWarn = Au moins un train Actif attend\nl'horloge rapide, mais il ne fonctionne pas.\n Voulez-vous d\u00e9marrer l'horloge rapide?
+FastClockWarn = Au moins un train Actif attend\nl'horloge rapide, mais il ne fonctionne pas.\n Voulez-vous d\u00e9marrer l'horloge rapide ?
 ButtonYesStart = Oui, lancez-la
 
 LayoutScale = \u00c9chelle du R\u00e9seau
@@ -280,4 +277,4 @@ Error36 = "{0}" erreurs constat\u00e9es lors de la v\u00e9rification/r\u00e9glag
 Error39 = AllocationAuto reqi\u00e8re un panneau \u00c9diteur de R\u00e9seau et essayez \u00e0 nouveau.
 
 SupportVSDecoder = Support de positionnement pour le d\u00e9codeur sonore virtuel 
-SupportVSDecoderBoxHint = Cochez cette case pour utiliser Dispatcheur pour aider la disposition des sons du trains depuis le D\u00e9codeur Son  Virtuel
+SupportVSDecoderBoxHint = Cochez cette case pour utiliser Dispatcheur pour aider la disposition des sons du trains depuis le D\u00e9codeur Son Virtuel
